# [richard-4] dataframe 분석중

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -1155,68 +1155,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "label_name='Exited'\n",
-    "X=df.drop(columns=label_name)\n",
-    "y=df[label_name]\n",
-    "X.shape, y.shape\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8000, 14)"
+       "Smith       32\n",
+       "Scott       29\n",
+       "Martin      29\n",
+       "Walker      28\n",
+       "Brown       26\n",
+       "            ..\n",
+       "Izmailov     1\n",
+       "Bold         1\n",
+       "Bonham       1\n",
+       "Poninski     1\n",
+       "Burbidge     1\n",
+       "Name: Surname, Length: 2932, dtype: int64"
       ]
      },
+     "execution_count": 38,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(8000,)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(2000, 14)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(2000,)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "display(X_train.shape)\n",
-    "display(y_train.shape)\n",
-    "\n",
-    "display(X_test.shape)\n",
-    "display(y_test.shape)"
+    "df['Surname'].value_counts()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2     1048\n",
+       "1     1035\n",
+       "7     1028\n",
+       "8     1025\n",
+       "5     1012\n",
+       "3     1009\n",
+       "4      989\n",
+       "9      984\n",
+       "6      967\n",
+       "10     490\n",
+       "0      413\n",
+       "Name: Tenure, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Tenure'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
