--- a/deep_learning_model.ipynb
+++ b/deep_learning_model.ipynb
@@ -362,6 +362,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Data Preprocess"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -721,6 +728,92 @@
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   RowNumber          10000 non-null  int64  \n",
+      " 1   CustomerId         10000 non-null  int64  \n",
+      " 2   Surname            10000 non-null  object \n",
+      " 3   CreditScore        10000 non-null  int64  \n",
+      " 4   Age                10000 non-null  int64  \n",
+      " 5   Tenure             10000 non-null  int64  \n",
+      " 6   Balance            10000 non-null  float64\n",
+      " 7   NumOfProducts      10000 non-null  int64  \n",
+      " 8   HasCrCard          10000 non-null  int64  \n",
+      " 9   IsActiveMember     10000 non-null  int64  \n",
+      " 10  EstimatedSalary    10000 non-null  float64\n",
+      " 11  Exited             10000 non-null  int64  \n",
+      " 12  Gender_Female      10000 non-null  uint8  \n",
+      " 13  Gender_Male        10000 non-null  uint8  \n",
+      " 14  Geography_France   10000 non-null  uint8  \n",
+      " 15  Geography_Germany  10000 non-null  uint8  \n",
+      " 16  Geography_Spain    10000 non-null  uint8  \n",
+      "dtypes: float64(2), int64(9), object(1), uint8(5)\n",
+      "memory usage: 986.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   CreditScore        10000 non-null  int64  \n",
+      " 1   Age                10000 non-null  int64  \n",
+      " 2   Tenure             10000 non-null  int64  \n",
+      " 3   Balance            10000 non-null  float64\n",
+      " 4   NumOfProducts      10000 non-null  int64  \n",
+      " 5   HasCrCard          10000 non-null  int64  \n",
+      " 6   IsActiveMember     10000 non-null  int64  \n",
+      " 7   EstimatedSalary    10000 non-null  float64\n",
+      " 8   Exited             10000 non-null  int64  \n",
+      " 9   Gender_Female      10000 non-null  uint8  \n",
+      " 10  Gender_Male        10000 non-null  uint8  \n",
+      " 11  Geography_France   10000 non-null  uint8  \n",
+      " 12  Geography_Germany  10000 non-null  uint8  \n",
+      " 13  Geography_Spain    10000 non-null  uint8  \n",
+      "dtypes: float64(2), int64(7), uint8(5)\n",
+      "memory usage: 752.1 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# RowNumber, CustomerId, Surname column drop!\n",
+    "df_sample_1 = df.drop(columns=['RowNumber', 'CustomerId', 'Surname'])\n",
+    "df_sample_1.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Construct model"
    ]
   },
   {
