--- a/deep_learning_model.ipynb
+++ b/deep_learning_model.ipynb
@@ -827,6 +827,170 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5-1. input shape "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_shape = X_train.shape[1]\n",
+    "input_shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5-2. construct model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.engine.sequential.Sequential at 0x7fe0a02d3dc0>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 입력 레이어를 Input 레이어로 사용할 수도 있습니다.  tf.keras.layers.Input(shape=(input_shape))\n",
+    "# 분류와 똑같지만 회귀는 출력을 하나로 합니다.  tf.keras.layers.Dense(1)\n",
+    "\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(units=256, activation='relu', input_shape=[input_shape]),\n",
+    "    tf.keras.layers.Dense(units=128, activation='relu'),\n",
+    "    tf.keras.layers.Dropout(0.2),\n",
+    "    tf.keras.layers.Dense(units=128, activation='sigmoid'),\n",
+    "    tf.keras.layers.Dense(units=64, activation='sigmoid'),\n",
+    "    tf.keras.layers.Dropout(0.2),\n",
+    "    tf.keras.layers.Dense(units=128, activation='sigmoid'),\n",
+    "    tf.keras.layers.Dense(units=64, activation='sigmoid'),\n",
+    "    tf.keras.layers.Dropout(0.2),\n",
+    "    tf.keras.layers.Dense(units=64, activation='sigmoid'),\n",
+    "    tf.keras.layers.Dense(units=32, activation='sigmoid'),\n",
+    "    tf.keras.layers.Dropout(0.2),\n",
+    "    tf.keras.layers.Dense(units=32, activation='sigmoid'),\n",
+    "    tf.keras.layers.Dense(units=16, activation='sigmoid'),\n",
+    "    tf.keras.layers.Dropout(0.2),\n",
+    "    tf.keras.layers.Dense(units=1),         \n",
+    "])\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 모델을 컴파일 합니다.\n",
+    "optimizer = tf.keras.optimizers.RMSprop(0.0001)\n",
+    "\n",
+    "model.compile(optimizer=optimizer,\n",
+    "             loss=[\"mse\"], \n",
+    "              metrics=[\"mae\", \"mse\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 256)               3584      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 128)               32896     \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 128)               16512     \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 64)                8256      \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 128)               8320      \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 64)                8256      \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_6 (Dense)             (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 32)                2080      \n",
+      "                                                                 \n",
+      " dropout_3 (Dropout)         (None, 32)                0         \n",
+      "                                                                 \n",
+      " dense_8 (Dense)             (None, 32)                1056      \n",
+      "                                                                 \n",
+      " dense_9 (Dense)             (None, 16)                528       \n",
+      "                                                                 \n",
+      " dropout_4 (Dropout)         (None, 16)                0         \n",
+      "                                                                 \n",
+      " dense_10 (Dense)            (None, 1)                 17        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 85,665\n",
+      "Trainable params: 85,665\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 모델을 요약합니다.\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Data split"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
