[kaye-5] edit file path

--- a/Bank Project.ipynb
+++ b/Bank Project.ipynb
@@ -36,7 +36,7 @@
    ],
    "source": [
     "# 데이터 원본 파일 불러오기\n",
-    "dataset = pd.read_csv('data/Churn.csv')\n",
+    "dataset = pd.read_csv('data/Churn Modeling.csv')\n",
     "dataset.shape"
    ]
   },
